--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "API desenvolvida para controle financeiro pessoal. RESTful API que permite:   Cadastrar Usuário, Fazer Login, Detalhar,  Perfil do Usuário Logado, Editar Perfil do Usuário Logado, Listar categorias,  Listar transações,  Detalhar transação,  Cadastrar transação, Editar transação,  Remover transação,  Obter extrato de transações.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon src/index.js"
   },
   "repository": {
     "type": "git",
